change some styles & update shopbybrandpro extension & change breadcrumbs logic.

--- a/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
+++ b/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
@@ -528,6 +528,9 @@ body{overflow-x: hidden;}
 			display:block;
 		}
 		.item.level0{
+            &:nth-last-child(2) .groupmenu-drop{
+                top:-317px;
+            }
 			display:block;
 			padding:0px;
 			border: 1px solid @ver_border;
