--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -37,9 +37,9 @@
 	.lib-css(color, @main_price_text);
 }
 .old-price {
-	margin-left:10px;
-
+	margin-left: 8px;
 	.lib-css(color, @main_hover_text);
+    vertical-align: text-bottom;
 	.price{.lib-css(color, @main_hover_text);}
 	//.price-label{ display:none;}
 	.price-wrapper {
