--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -277,11 +277,12 @@
             }
             .old-price {
                 .price-wrapper .price {
-                    .lib-css(font, @f_h2);
-                    font-weight: @font-weight__light;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #999999;
                 }
                 .price-label {
-                    display: inline-block;
+                    display: none !important;
                 }
             }
             .special-price {
@@ -470,7 +471,7 @@
     }
 
     .box-tocart {
-        margin: 0 0 8px;
+        margin: 20px 0 8px;
         .field.qty {
         }
         .input-text.qty {
@@ -1367,6 +1368,14 @@
     color: #333333;
     margin-top: 0px;
     padding-top: 12px;
+}
+.product-options-bottom .price-box .price-container .price, .product-info-price .price-box .price-container .price {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    color: #333333;
+    font-family: 'roboto-medium';
 }
 .product-info-main .product-reviews-summary{
     margin-top: 0;
