--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
@@ -279,11 +279,12 @@
             }
             .old-price {
                 .price-wrapper .price {
-                    .lib-css(font, @f_h2);
-                    font-weight: @font-weight__light;
+                    font-size: 14px;
+                    line-height: 16px;
+                    color: #999999;
                 }
                 .price-label {
-                    display: inline-block;
+                    display: none !important;
                 }
             }
             .special-price {
@@ -1341,8 +1342,8 @@
 .product-options-bottom .price-box .price-container .price, .product-info-price .price-box .price-container .price {
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 23px;
+    font-size: 24px;
+    line-height: 28px;
     color: #333333;
     font-family: 'roboto-medium';
 }
