--- a/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductLabel/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductLabel/web/css/source/_module.less
@@ -1,4 +1,4 @@
-ul.cdz-product-labels {position: absolute;  top: 10px;  right: 10px; z-index: 2; padding:0; margin:0;}
+ul.cdz-product-labels {display:none; position: absolute;  top: 10px;  right: 10px; z-index: 2; padding:0; margin:0;}
 .rtl-layout ul.cdz-product-labels{
 	left: 10px;
 	right: auto;
