change some style.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/_module.less
@@ -1158,7 +1158,7 @@ body.catalog-product-compare-index {
 					height:40px;
 					line-height:40px;
 					display:block;
-					.lib-css(border, 1px solid @main_border);
+					.lib-css(border, 1px solid #E1E1E1);
 					.abs-transition();
 					.abs-borderradius(0);
 				}
