--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -220,7 +220,7 @@
             /*display: table;
             width: 100%;*/
 			.lib-css(background, @main_block_background);
-			//.lib-css(border, 1px solid @main_border);
+			//.lib-css(border, 1px solid #E1E1E1);
 			clear:both;
 			width:100%;
 			margin-bottom:20px;
@@ -426,7 +426,7 @@
            .lib-css(background, @main_block_background);
             padding: 0 9px 9px 9px;
             margin: 9px 0 0 -1px;
-            border: 1px solid @main_border;
+            border: 1px solid #E1E1E1;
             border-top: none;
             .abs-boxshadow(0 3px 5px #d4d4d4);
 			.abs-borderradius(0 0 5px 5px);
