--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
@@ -236,7 +236,7 @@ button.primary{
 		span{
 			.abs-transition();
 			padding:11px 20px;
-			.lib-css(border, 1px solid @main_border);
+			.lib-css(border, 1px solid #E1E1E1);
 			float:left;
 			width:96.5%;
 			text-transform: none;
