--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_lookbook.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_lookbook.less
@@ -1,16 +1,16 @@
 /*--- Lookbook Page Top ---*/
 .loobook-container{
     .lookbook-img-wrap {
-        border-color: @main_border;
+        border-color: #E1E1E1;
         background: #ffffff;
         .lookbook-image{
-           border: 1px solid @main_border;
+           border: 1px solid #E1E1E1;
         }
     }
     .cover-section{
         .after-cover{
             background-color: @main_block_background;
-            border: 1px solid @main_border;
+            border: 1px solid #E1E1E1;
             border-top: none;
             .title{
                 color: @main_title_text;
@@ -19,7 +19,7 @@
     }
     .social-section {
         .cdz-social-listing{
-            .item{                
+            .item{
                 .share-btn{
                    .abs-cssall(@btn_primary_text, @btn_primary_border, @btn_primary_background);
                     &:hover{
@@ -58,13 +58,13 @@
 				.lib-css(font, @f_h2);
 				color: @main_title_text;
 			}
-			.product-item{				
+			.product-item{
 				&.product-active{
 					.product-top .product-number{
 						.abs-cssall(@btn_primary_text, @btn_primary_border, @btn_primary_background);
 					}
 				}
-				.button-buy{					
+				.button-buy{
 					.abs-cssall(@btn_primary_text, @btn_primary_border, @btn_primary_background);
                     &:hover{
                        .abs-cssall(@btn_default_text, @btn_default_border, @btn_default_background);
