--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_slider.less
@@ -121,7 +121,7 @@
 	.cdz-banners-item{
 		padding:5px;
 		background-color:@main_block_background;
-		border:1px solid @main_border;
+		border:1px solid #E1E1E1;
 		//.abs-boxshadow(inset 0 0 1px #000000);
 	}
 	.cdz-slider-banners{
