--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
@@ -346,13 +346,13 @@
 	.owl-carousel{ padding-top:0}
 
 	.owl-carousel.owl-drag .owl-item{
-		border-right:1px solid @main_border;
-		border-left:1px solid @main_border;
+		border-right:1px solid #E1E1E1;
+		border-left:1px solid #E1E1E1;
 		position:relative;
 		.item-slider > .item{
 			position:relative;
 			.abs-transition;
-			border-bottom:1px solid @main_border;
+			border-bottom:1px solid #E1E1E1;
 			.product-item-info:before{
 				border:2px solid transparent;
 				position:absolute;
@@ -400,7 +400,7 @@
 			top:-54px;
 		}
 		.products.wrapper{
-			border:1px solid @main_border;
+			border:1px solid #E1E1E1;
 			//overflow:hidden;
 		}
 		.products-grid {
@@ -425,7 +425,7 @@
 						content:'';
 						height:100%;
 						width:1px;
-						border-right:1px solid @main_border;
+						border-right:1px solid #E1E1E1;
 						z-index:3;
 					}
 
@@ -461,7 +461,7 @@
 			}
 		}
 		.products.wrapper{
-			border:1px solid @main_border;
+			border:1px solid #E1E1E1;
 			.abs-borderradius(@border-radius);
 			background:@main_block_background;
 			.product-items{
@@ -491,8 +491,8 @@
 			}
 		}
 		.small-product{
-			border-right:1px solid @main_border;
-			border-bottom:1px solid @main_border;
+			border-right:1px solid #E1E1E1;
+			border-bottom:1px solid #E1E1E1;
 		}
 		.products-grid {
 			.product-item-name{ min-height:36px;}
@@ -531,7 +531,7 @@
 
 /*.product-style04{
 	.products.wrapper{
-		border:1px solid @main_border;
+		border:1px solid #E1E1E1;
 		border-radius:5px;
 		background:@main_block_background;
 		.product-items{
@@ -562,10 +562,10 @@
 			.item{
 				width:33.3333%;
 				margin-bottom:0;
-				border-right:1px solid @main_border;
+				border-right:1px solid #E1E1E1;
 			}
 			&:first-child{
-				.item{ border-bottom:1px solid @main_border;}
+				.item{ border-bottom:1px solid #E1E1E1;}
 			}
 		}
 	}
