--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/webkul/_webkul.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/webkul/_webkul.less
@@ -1210,7 +1210,7 @@ padding:5px 0px 5px 15px
 	#info .section{
 		padding:5px;
 		font-weight:500;
-		border-top:1px solid @main_border;
+		border-top:1px solid #E1E1E1;
 		border-bottom:0;
 		width:100%;
 		a{padding:5px 0;}
