--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1164,7 +1164,7 @@
                     height:40px;
                     line-height:40px;
                     display:block;
-                    .lib-css(border, 1px solid @main_border);
+                    .lib-css(border, 1px solid #E1E1E1);
                     .abs-transition();
                     .abs-borderradius(0);
                 }
@@ -1263,7 +1263,7 @@
         color:#666666;
         padding:15px;
         .items{
-            border-bottom:1px solid @main_border;
+            border-bottom:1px solid #E1E1E1;
             padding-bottom: 10px;
             li{
                 padding:3px 0;
