--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -187,7 +187,7 @@
 		padding:10px 7px;
 		margin:0;
 		font-size:11px;
-		.lib-css(border-bottom, 1px solid @main_border);
+		.lib-css(border-bottom, 1px solid #E1E1E1);
 		&.last{
 			border-bottom:0;
             margin-bottom: 12px;
@@ -473,9 +473,9 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.lib-css(background, @main_block_background);
     border-radius: 4px;
     margin-bottom: 24px;
-	//.lib-css(border, 1px solid @main_border);
+	//.lib-css(border, 1px solid #E1E1E1);
 	.block-title{
-		.lib-css(border-bottom, 1px solid @main_border);
+		.lib-css(border-bottom, 1px solid #E1E1E1);
 		padding: 20px 20px 0;
 		margin-bottom:0;
 		.b-title{
@@ -637,7 +637,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 @media screen and (min-width:768px){
 	.cdz-product-tab01{
 		.nav-tabs.abs-dropdown{
-			border-bottom:1px solid @main_border;
+			border-bottom:1px solid #E1E1E1;
 			text-align:left;
 			.rtl-layout &{
 				text-align:right;
@@ -711,7 +711,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 .product-list-style02{
 	.cdz-products-list{
 		.lib-css(background, @main_block_background);
-		border: 1px solid @main_border;
+		border: 1px solid #E1E1E1;
 	}
 	&.block:not(.block-static-block) .block-content{
 		padding: 0 !important;
@@ -734,7 +734,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			margin-top: 0;
 			margin-bottom:0;
 			min-height: 80px;
-			border-bottom: 1px solid @main_border;
+			border-bottom: 1px solid #E1E1E1;
 			&:last-child{
 				border-bottom:0
 			}
@@ -858,7 +858,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		text-overflow: ellipsis;
 	}
 	.cdz-blog-bottom{
-		.lib-css(border, 1px solid @main_border);
+		.lib-css(border, 1px solid #E1E1E1);
 	}
 	.owl-carousel .owl-nav{
 		right: -5px;
@@ -937,7 +937,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.box{
 		position:relative;
 		overflow:hidden;
-		.lib-css(border, 1px solid @main_border);
+		.lib-css(border, 1px solid #E1E1E1);
 		.abs-cssall(#808080, @main_block_background);
 		padding:20px 60px 20px 20px;
 		.rtl-layout &{
@@ -1219,7 +1219,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 	.sidebar .widget.blog-search .block-content {
 		padding-top: 15px !important;
-		border:1px solid @main_border !important;
+		border:1px solid #E1E1E1 !important;
 	}
 	.post-view .post-bottom .block.related:not(.block-static-block){
 		.block-title{
@@ -1232,7 +1232,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.sidebar .widget.block-categories{
 		ul.accordion{
 			padding:15px 20px !important;
-			.lib-css(border, 1px solid @main_border);
+			.lib-css(border, 1px solid #E1E1E1);
 			border-top:0;
 			margin:0 !important;
 		}
@@ -1552,7 +1552,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			display:block;
 			padding: 15px 20px;
 			&:first-child{
-				border-bottom:1px solid @main_border;
+				border-bottom:1px solid #E1E1E1;
 			}
 		}
 	}
