--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -140,7 +140,7 @@
 .products.wrapper ~ .toolbar {
 	//padding-top: @indent__base;
 	//padding-bottom: 0;
-	//.lib-css(border-top, 1px solid @main_border);
+	//.lib-css(border-top, 1px solid #E1E1E1);
 	//.lib-css(border-bottom, 0px);
 }
 //
