--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Swatches/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Swatches/web/css/source/_module.less
@@ -136,7 +136,7 @@
             }
 
             &.text {
-                width: 84px;
+                min-width: 84px;
                 height: 35px;
                 color: #333333;
                 font-size: 16px;
