--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_slider.less
@@ -143,7 +143,7 @@
 		}
 	}
 	.cdz-brand-slider{
-		.lib-css(border,1px solid @main_border);
+		.lib-css(border,1px solid #E1E1E1);
 		.lib-css(background, @main_block_background);
 	}
 	.owl-item.active{
@@ -165,7 +165,7 @@
 			padding:40px 23px;
 			display:block;
 			&:first-child{
-				border-bottom:1px solid @main_border;
+				border-bottom:1px solid #E1E1E1;
 			}
 		}
 	}
