--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_homestore.less
@@ -14,7 +14,7 @@
 /*Brand - HomePage*/
 .cdz-brand-slider-wrap{
 	.item-group{
-		border: 1px solid @main_border;
+		border: 1px solid #E1E1E1;
 	}
 	.shop-by-brand-slider.owl-carousel{
 		padding-top: 0;
@@ -45,7 +45,7 @@
 				.abs-scale(~'1, 1');
 			}
 		}
-		
+
 	}
 }
 .block-brands .block-content .owl-carousel .owl-nav {
