--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_tabproducts.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_tabproducts.less
@@ -514,7 +514,7 @@ body.rtl-layout{
         top: -12px;
         z-index: 1000000;
         background-color: @main_block_background;
-        border: 1px solid @main_border;
+        border: 1px solid #E1E1E1;
 		padding: 0;
         .item {
             margin: 0 0;
