--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-ads.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-ads.less
@@ -191,14 +191,14 @@
 	.custom-info-block{
 		clear:both;
 		width:100%;
-		border:1px solid @main_border;
+		border:1px solid #E1E1E1;
 		border-left:3px solid @clo02;
 		padding: 7px 20px;
 		.abs-borderradius(@border-radius);
 		position:relative;
 		.rtl-layout &{
 			border-right:3px solid @clo02;
-			border-left:1px solid @main_border;
+			border-left:1px solid #E1E1E1;
 		}
 		.abs-transition;
 		p{
