--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
@@ -285,7 +285,7 @@
             }
             .filter-title {
 				background:@main_block_background !important;
-                border-bottom: 1px solid @main_border;
+                border-bottom: 1px solid #E1E1E1;
                 height: 48px;
                 left: 0;
                 position: fixed !important;
@@ -597,7 +597,7 @@
 					margin-bottom:5px;
 					width: 20%;
 					//.abs-borderradius(@border-radius);
-					//border: 1px solid @main_border;
+					//border: 1px solid #E1E1E1;
 					background: @main_block_background;
 					padding: 8px 15px;
 					vertical-align: top;
