--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -184,14 +184,14 @@
 		left:20px;
 		right:auto;
 	}
-	.lib-css(border, 1px solid @main_border);
+	.lib-css(border, 1px solid #E1E1E1);
 	.lib-css(background, @main_block_background);
 	.item{
 		text-align:center;
 		padding:10px 7px;
 		margin:0;
 		font-size:11px;
-		.lib-css(border-bottom, 1px solid @main_border);
+		.lib-css(border-bottom, 1px solid #E1E1E1);
 		&.last{
 			border-bottom:0;
 		}
@@ -485,9 +485,9 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 .box-product{
 	.lib-css(background, @main_block_background);
     border-radius: 4px;
-	//.lib-css(border, 1px solid @main_border);
+	//.lib-css(border, 1px solid #E1E1E1);
 	.block-title{
-		.lib-css(border-bottom, 1px solid @main_border);
+		.lib-css(border-bottom, 1px solid #E1E1E1);
 		padding: 11px 20px 0;
 		margin-bottom:0;
 		.b-title{
@@ -619,7 +619,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 @media screen and (min-width:768px){
 	.cdz-product-tab01{
 		.nav-tabs.abs-dropdown{
-			border-bottom:1px solid @main_border;
+			border-bottom:1px solid #E1E1E1;
 			text-align:left;
 			.rtl-layout &{
 				text-align:right;
@@ -693,7 +693,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 .product-list-style02{
 	.cdz-products-list{
 		.lib-css(background, @main_block_background);
-		border: 1px solid @main_border;
+		border: 1px solid #E1E1E1;
 	}
 	&.block:not(.block-static-block) .block-content{
 		padding: 8px 0 !important;
@@ -716,7 +716,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			margin-top: 0;
 			margin-bottom:0;
 			min-height: 80px;
-			border-bottom: 1px solid @main_border;
+			border-bottom: 1px solid #E1E1E1;
 			&:last-child{
 				border-bottom:0
 			}
@@ -814,7 +814,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		text-overflow: ellipsis;
 	}
 	.cdz-blog-bottom{
-		.lib-css(border, 1px solid @main_border);
+		.lib-css(border, 1px solid #E1E1E1);
 	}
 	.owl-carousel .owl-nav{
 		right: -5px;
@@ -898,7 +898,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.box{
 		position:relative;
 		overflow:hidden;
-		.lib-css(border, 1px solid @main_border);
+		.lib-css(border, 1px solid #E1E1E1);
 		.abs-cssall(#808080, @main_block_background);
 		padding:20px 60px 20px 20px;
 		.rtl-layout &{
@@ -1176,7 +1176,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 	.sidebar .widget.blog-search .block-content {
 		padding-top: 15px !important;
-		border:1px solid @main_border !important;
+		border:1px solid #E1E1E1 !important;
 	}
 	.post-view .post-bottom .block.related:not(.block-static-block){
 		.block-title{
@@ -1189,14 +1189,14 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.sidebar .widget.block-categories{
 		ul.accordion{
 			padding:15px 20px !important;
-			.lib-css(border, 1px solid @main_border);
+			.lib-css(border, 1px solid #E1E1E1);
 			border-top:0;
 			margin:0 !important;
 		}
 	}
 	.block-collapsible-nav .content{
 		padding:15px 20px !important;
-		.lib-css(border,1px solid @main_border);
+		.lib-css(border,1px solid #E1E1E1);
 		border-top:0;
 	}
 }
@@ -1666,7 +1666,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			display:block;
 			padding: 15px 20px;
 			&:first-child{
-				border-bottom:1px solid @main_border;
+				border-bottom:1px solid #E1E1E1;
 			}
 		}
 	}
