change home,cms,coupon,product collection styles.

--- a/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
@@ -23,8 +23,11 @@
 
 <?php if(count($fields)>0): ?>
 <style>
+    .contact-index-index .page-main {
+        padding-top: 24px;
+    }
     .page-title-wrapper .page-title {
-        padding: 24px 16px;
+        padding: 0 0 24px;
         margin: 0;
     }
     .page-layout-1column .columns {
@@ -113,6 +116,13 @@
         .row .col-sm-12:last-child {
             border-top: 8px solid #F4F4F4;
             padding-top: 24px;
+        }
+        .contact-index-index .page-main {
+            padding-top: 0;
+        }
+        .page-title-wrapper .page-title {
+            padding: 24px 16px;
+            margin: 0;
         }
     }
 </style>
