--- a/app/code/Ecopure/Catalog/view/frontend/templates/coupon.phtml
+++ b/app/code/Ecopure/Catalog/view/frontend/templates/coupon.phtml
@@ -58,7 +58,7 @@
         }
 
         .mg-product-code-content-price {
-            font-family: 'Roboto-Bold';
+            font-family: 'roboto-bold';
             font-style: normal;
             font-weight: normal;
             font-size: 22px;
@@ -68,7 +68,7 @@
         }
 
         .mg-product-code-content-off {
-            font-family: 'Roboto-Regular';
+            font-family: 'Roboto';
             font-style: normal;
             font-weight: normal;
             font-size: 18px;
@@ -78,7 +78,7 @@
         }
 
         .mg-product-code-content-box span {
-            font-family: 'Roboto-Bold';
+            font-family: 'roboto-bold';
             font-style: normal;
             font-weight: normal;
             font-size: 18px;
@@ -87,7 +87,7 @@
         }
 
         .mg-product-code-content-date {
-            font-family: 'Roboto-Regular';
+            font-family: 'Roboto';
             font-style: normal;
             font-weight: normal;
             font-size: 12px;
@@ -117,7 +117,7 @@
         .mg-product-code-content-number {
             border: 0;
             width: 90px;
-            font-family: 'Roboto-Bold';
+            font-family: 'roboto-bold';
             font-style: normal;
             font-weight: normal;
             font-size: 18px;
