--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -348,7 +348,7 @@
     }
 
     .product-item-link {
-        font-size: 16px !important;
+        font-size: 14px !important;
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
@@ -393,6 +393,11 @@
 					width:120px !important;
 				}
             }
+        }
+    }
+    .products-grid {
+        .product-item-link {
+            font-size: 16px !important;
         }
     }
 }
