--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_cmspage.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_cmspage.less
@@ -207,7 +207,18 @@
 #map_canvas{ width:100% !important}
 
 //About us
-.cms-about-us .wrapper-breadcrums{ display:none;}
+.cms-about-us, .cms-return-refund-policy, .cms-shipping-policy {
+    .wrapper-breadcrums {
+        display:none;
+    }
+    .page-main {
+        padding-top: 0;
+    }
+    .page-title-wrapper .page-title {
+        padding: 24px 16px;
+        margin: 0;
+    }
+}
 .aboutus-page{
 	.aboutus-box{
 		margin-bottom:60px;
