--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -448,6 +448,12 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 
 	}
 	.product-list-style02{
+        .save-price-info {
+            display: none;
+        }
+        .product-image-wrapper {
+            width: 80px;
+        }
 		.product-items  .product-item-details{
 			margin-left:90px;
 			position:relative;
@@ -463,7 +469,45 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 2;
                 margin-bottom: 8px;
+                line-height: 15.6px;
 			}
+            .price-box {
+                font-size: 12px;
+                line-height: 14px;
+                margin: 0;
+                padding: 8px 0 0;
+                .price {
+                    font-weight: normal !important;
+                    font-size: 12px;
+                    line-height: 14px;
+                }
+            }
+            .old-price {
+                display: none;
+            }
+            .product-reviews-summary {
+                height: auto;
+                line-height: 16px;
+                vertical-align: text-bottom;
+                display: block;
+                .rating-summary {
+                    height: 16px;
+                    .rating-result {
+                        width: 77px;
+                        &:before {
+                            font-size: 14px;
+                            line-height: 14px;
+                        }
+                    }
+                }
+                .reviews-actions {
+                    font-size: 14px;
+                    line-height: 16px;
+                    a {
+                        color: #666666;
+                    }
+                }
+            }
 		}
 	}
 }
@@ -532,6 +576,9 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 }
 .product-style05 .products-grid{
+    .save-price-info {
+        display: none;
+    }
 	.item.product-item .product-item-info .cdz-product-bottom:not(.non-hover){
 		top:50%
 	}
@@ -541,12 +588,38 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 	.product-item {
         .price-box {
-            padding: 6px 0 0;
+            padding: 8px 0 0;
             .price{
-                font-size:16px
+                font-size: 16px;
+            }
+        }
+        .old-price {
+            display: none;
+        }
+        .product-reviews-summary {
+            min-height: 16px;
+            vertical-align: text-bottom;
+            .rating-summary {
+                height: 16px;
+                .rating-result {
+                    &:before {
+                        font-size: 14px;
+                        line-height: 14px;
+                    }
+                }
+            }
+            .reviews-actions {
+                font-size: 14px;
+                line-height: 16px;
+                a {
+                    color: #666666;
+                }
             }
         }
 	}
+    .product-items {
+        padding-bottom: 20px;
+    }
 	.product-item-info .product-item-details{
 		padding:0 0 15px;
 		display: flex;
@@ -554,7 +627,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		justify-content: flex-start;
         .product-item-name {
             margin-top: 10px;
-            margin-bottom: 6px !important;
+            margin-bottom: 8px !important;
         }
 
 	}
@@ -1327,7 +1400,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 }
 @media (min-width: 1200px){
 	.product-style05 .products-grid .product-item-info .product-item-details{
-	    min-height: 157px;
+	    min-height: 100px;
+	    max-height: 100px;
 	}
 }
 @media (min-width: 768px) and (max-width: 1199px) {
