sticky cart style & feature style change. mobile menu style change.

--- a/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
+++ b/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
@@ -728,6 +728,9 @@ body{overflow-x: hidden;}
             .groupdrop-link {
                 li.item{
                     padding: 0 0 16px;
+                    &:last-child {
+                        padding: 0;
+                    }
                 }
             }
 		}
