--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_menu.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_menu.less
@@ -687,7 +687,7 @@
             }
             li.item.open{
                 > a.menu-link {
-                    font-weight: bold;
+                    font-family: 'roboto-medium';
                 }
             }
             li.item.level0.open{
